--- a/index.html
+++ b/index.html
@@ -4,25 +4,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Elegant Curved Gold-White Question Display</title>
+    <title>Question Display</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
 </head>
 
 <body>
+    <audio id="beepSound" src="Beep.wav"></audio>
+    <div id="particles-js"></div>
     <div class="curved-line"></div>
     <div class="curved-line"></div>
     <div class="curved-line"></div>
     <div class="curved-line"></div>
 
     <div class="container1">
+        <div class="golden-light"></div>
         <div class="question-container d-flex justify-content-center align-items-center">
             <div class="question" id="questionDisplay">คำถามสำหรับ ดาวเดือน</div>
         </div>
         <div class="gold-line"></div>
         <button class="button" id="generateButton">Generate Question</button>
+        <button id="resetQuestionButton">Reset Question</button>
+
+        <!-- Timer Div -->
+        <div id="timerContainer">
+            <div id="timerDisplay">02:00</div>
+            <button id="startTimerButton">Start Timer</button>
+            <button id="stopTimerButton">Stop</button>
+            <button id="resetTimerButton">Reset</button>
+        </div>
+        
+    </div>
+    
+    <div class="background-effect">
+        <span style="--i:1;"></span>
+        <span style="--i:2;"></span>
+        <span style="--i:3;"></span>
+        <span style="--i:4;"></span>
     </div>
 
     <script src="./script.js"></script>
