--- a/index.html
+++ b/index.html
@@ -4,15 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Question Display</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Ramdom</title>
     <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./logocrown.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Charm:wght@400;700&family=Estonia&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Meie+Script&family=Spirax&display=swap');
+
+        body {
+            font-family: "Charm", serif !important; 
+            ;
+        }
+    </style>
 
 </head>
+
 
 <body>
     <audio id="beepSound" src="Beep.wav"></audio>
@@ -25,7 +34,7 @@
     <div class="container1">
         <div class="golden-light"></div>
         <div class="question-container d-flex justify-content-center align-items-center">
-            <div class="question" id="questionDisplay">คำถามสำหรับ ดาวเดือน</div>
+            <div class="question" id="questionDisplay">คำถามสำหรับผู้เข้าประกวด</div>
         </div>
         <div class="gold-line"></div>
         <button class="button" id="generateButton">Generate Question</button>
@@ -38,9 +47,9 @@
             <button id="stopTimerButton">Stop</button>
             <button id="resetTimerButton">Reset</button>
         </div>
-        
+
     </div>
-    
+
     <div class="background-effect">
         <span style="--i:1;"></span>
         <span style="--i:2;"></span>
