--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
     <div class="curved-line"></div>
 
     <div class="container1">
-        <div class="golden-light"></div>
+        <!-- <div class="golden-light"></div>
         <div class="question-container d-flex justify-content-center align-items-center">
             <div class="question" id="questionDisplay">QUESTION RANDOM</div>
         </div>
         <div class="gold-line"></div>
         <button class="button" id="generateButton">Generate QUESTION</button>
-        <button id="resetQuestionButton">Reset QUESTION</button>
+        <button id="resetQuestionButton">Reset QUESTION</button> -->
 
         <!-- Timer Div -->
         <div id="timerContainer">
